DrawingEditor/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Users\alexw\Downloads\commons-io-2.5-bin\commons-io-2.5\commons-io-2.5-javadoc.jar;C:\Users\alexw\Downloads\commons-codec-1.10-bin\commons-codec-1.10\commons-codec-1.10.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\alexw\Documents\GitHub\unit7ObjectOrientedDesign\DrawingEditor
-d
C:\Users\alexw\Documents\GitHub\unit7ObjectOrientedDesign\DrawingEditor\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\alexw\Documents\GitHub\unit7ObjectOrientedDesign\DrawingEditor\DrawingPanel.java
<---- end of javadoc command ---->
Loading source file C:\Users\alexw\Documents\GitHub\unit7ObjectOrientedDesign\DrawingEditor\DrawingPanel.java...
Constructing Javadoc information...
Standard Doclet version 1.8.0_40
Building tree for all the packages and classes...
Generating C:\Users\alexw\Documents\GitHub\unit7ObjectOrientedDesign\DrawingEditor\doc\DrawingPanel.html...
C:\Users\alexw\Documents\GitHub\unit7ObjectOrientedDesign\DrawingEditor\DrawingPanel.java:53: warning - @pre is an unknown tag.
C:\Users\alexw\Documents\GitHub\unit7ObjectOrientedDesign\DrawingEditor\DrawingPanel.java:53: warning - @post is an unknown tag.
C:\Users\alexw\Documents\GitHub\unit7ObjectOrientedDesign\DrawingEditor\DrawingPanel.java:53: warning - @param argument "y" is not a parameter name.
C:\Users\alexw\Documents\GitHub\unit7ObjectOrientedDesign\DrawingEditor\DrawingPanel.java:53: warning - @return tag cannot be used in method with void return type.
C:\Users\alexw\Documents\GitHub\unit7ObjectOrientedDesign\DrawingEditor\DrawingPanel.java:73: warning - @pre is an unknown tag.
C:\Users\alexw\Documents\GitHub\unit7ObjectOrientedDesign\DrawingEditor\DrawingPanel.java:73: warning - @post is an unknown tag.
C:\Users\alexw\Documents\GitHub\unit7ObjectOrientedDesign\DrawingEditor\DrawingPanel.java:73: warning - @param argument "y" is not a parameter name.
C:\Users\alexw\Documents\GitHub\unit7ObjectOrientedDesign\DrawingEditor\DrawingPanel.java:73: warning - @return tag cannot be used in method with void return type.
C:\Users\alexw\Documents\GitHub\unit7ObjectOrientedDesign\DrawingEditor\DrawingPanel.java:91: warning - @param argument "y" is not a parameter name.
C:\Users\alexw\Documents\GitHub\unit7ObjectOrientedDesign\DrawingEditor\DrawingPanel.java:91: warning - @return tag cannot be used in method with void return type.
Generating C:\Users\alexw\Documents\GitHub\unit7ObjectOrientedDesign\DrawingEditor\doc\package-frame.html...
Generating C:\Users\alexw\Documents\GitHub\unit7ObjectOrientedDesign\DrawingEditor\doc\package-summary.html...
Generating C:\Users\alexw\Documents\GitHub\unit7ObjectOrientedDesign\DrawingEditor\doc\constant-values.html...
Generating C:\Users\alexw\Documents\GitHub\unit7ObjectOrientedDesign\DrawingEditor\doc\serialized-form.html...
C:\Users\alexw\Documents\GitHub\unit7ObjectOrientedDesign\DrawingEditor\DrawingEditor.java:26: error: <identifier> expected
            frame.();
                  ^
Building index for all the packages and classes...
Building index for all classes...
Generating C:\Users\alexw\Documents\GitHub\unit7ObjectOrientedDesign\DrawingEditor\doc\allclasses-frame.html...
Generating C:\Users\alexw\Documents\GitHub\unit7ObjectOrientedDesign\DrawingEditor\doc\allclasses-noframe.html...
Generating C:\Users\alexw\Documents\GitHub\unit7ObjectOrientedDesign\DrawingEditor\doc\index.html...
Generating C:\Users\alexw\Documents\GitHub\unit7ObjectOrientedDesign\DrawingEditor\doc\stylesheet.css...
1 error
10 warnings
